# cpp_rasterizer

./: .gitignore  Architecture.md  BuildDebug.bat  BuildRelease.bat  CMakeLists.txt  CODING_STANDARD.md  README.md
rasterizer_core/: CMakeLists.txt  Core.h
rasterizer_core/include/: Core.h  rasterizer.hpp
rasterizer_core/include/platform/: platform.hpp
rasterizer_core/src/platform/: platform.cpp
rasterizer_core/src/platform/Win32/: platform_windows.cpp  platform_windows.hpp
runtime/: CMakeLists.txt
runtime/src/: main.cpp
shader_module/: CMakeLists.txt
shader_module/include/: shader_module.hpp
shader_module/src/: dummy.cpp
